Add setting for width/height of popups
Ref #7

--- a/content/settings/settings.css
+++ b/content/settings/settings.css
@@ -14,3 +14,11 @@ legend {
 fieldset:not(:first-child) {
 	margin-top: 2em;
 }
+
+th {
+	text-align: left;
+}
+
+.description {
+	margin-bottom: 1em;
+}
