--- a/content/settings/settings.css
+++ b/content/settings/settings.css
@@ -2,6 +2,10 @@
 	padding-right: 4px;
 }
 
+input[type="number"] {
+	width: 100%;
+}
+
 input[type="checkbox"] {
 	vertical-align: middle;
 	margin: 4px;
