--- a/content/button/panel.css
+++ b/content/button/panel.css
@@ -21,6 +21,25 @@ body {
 	display: none;
 }
 
+.wrapper {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+}
+
+.menu {
+	flex: 1;
+}
+
+.footer {
+	text-align: center;
+}
+
+.footer .menu-item {
+	border-bottom: 0;
+	border-top: 1px solid #CDCDCD;
+}
+
 ul {
 	list-style: none;
 	margin: 0;
